test/invalid/OverrideErrors/SuperOverride.plume
/**
 * Super class to a semantically incorrect class, ChildOverride.plume
 * @author 35237, Marcos Vasco
 */
abstract class SuperOverride extends Object is
  
  abstract method calculate : (val1 : Boolean, val2 : Boolean) -> Boolean